# store-demo

./: .gitignore  METRICS_GUIDE.md  ai-service.yaml  aks-store-all-in-one.yaml  docker-compose.yml  loki-config.yaml  otel-collector-config.yaml  package-lock.json  prometheus.yml  promtail-config.yml
docs/: opentelemetry.md
src/ai-service/: Dockerfile  main.py  requirements.txt  telemetry.py
src/makeline-service/: Dockerfile  go.mod  go.sum  main.go  orderqueue.go
src/order-service/: Dockerfile  app.js  instrumentation.js  package-lock.json  package.json
src/product-service/: Cargo.toml
src/product-service/src/: lib.rs  main.rs  model.rs  startup.rs  telemetry.rs
src/product-service/src/routes/: get.rs  health.rs  metrics.rs  mod.rs
src/store-admin/: Dockerfile  package-lock.json  package.json
src/store-admin/src/: main-with-telemetry.ts  main.ts  telemetry.ts
src/store-admin/src/types/: global.d.ts
src/store-front/: Dockerfile  nginx.conf  package-lock.json  package.json
src/store-front/src/: App.vue  main-with-telemetry.ts  main.ts  telemetry.ts
src/virtual-customer/: Cargo.toml  Dockerfile
src/virtual-customer/src/: main.rs  telemetry.rs
src/virtual-worker/: Cargo.toml  Dockerfile
src/virtual-worker/src/: main.rs  telemetry.rs
