[package]
name = "product-service"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "product-service"

[lib]
name = "product_service"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.8.0"
log = "0.4.22"
env_logger = "0.11.5"
futures-util = "0.3.30"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
anyhow = "1.0.86"
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", branch = "release-15.0.0", features = ["component-model"] }
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime", branch = "release-15.0.0" }
ctor = "0.2.8"

# OpenTelemetry dependencies
opentelemetry = { version = "0.20.0", features = ["trace", "rt-tokio"] }
opentelemetry_sdk = { version = "0.20.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.13.0", features = ["grpc-tonic", "http-proto"] }
tracing = "0.1.37"
tracing-opentelemetry = "0.20.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-actix-web = "0.7.11"
