[package]
name = "virtual-customer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
reqwest = { version = "0.11.27", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
anyhow = "1.0"

# OpenTelemetry dependencies
opentelemetry = { version = "0.20.0", features = ["trace", "rt-tokio"] }
opentelemetry_sdk = { version = "0.20.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.13.0", features = ["grpc-tonic", "http-proto", "reqwest-client"] }
opentelemetry-http = "0.9.0"
reqwest-middleware = "0.2.4"
reqwest-tracing = { version = "0.4.7", features = ["opentelemetry_0_20"] }
tracing = "0.1.37"
tracing-opentelemetry = "0.20.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tokio = { version = "1.0", features = ["full"] }

# Prometheus dependencies
prometheus = { version = "0.13.4", features = ["process"] }
actix-web = "4.8.0"
actix-cors = "0.7.0"
